# SPDX-FileCopyrightText: 2023 Jonathan 'theJPster' Pallant <github@thejpster.org.uk>
#
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "nau88c22"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "1.0.0-rc.1"
bitfield = "0.14"
defmt = { version = "0.3.5", optional = true }

[features]
defmt = ["dep:defmt"]
